Closed Bug 1279524 Opened 8 years ago Closed 8 years ago

MIPS simulator doesn't build

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla50
Tracking Status
firefox50 --- fixed

People

(Reporter: jonco, Unassigned)

Details

Attachments

(1 file)

I get the following error trying to make a 64-bit MIPS simulator build:

/home/jon/clone/dev/js/src/jit/Ion.cpp:1893:18: error: cannot declare variable ‘lirgen’ to be of abstract type ‘js::jit::LIRGenerator’
     LIRGenerator lirgen(mir, graph, *lir);
                  ^
In file included from /home/jon/clone/dev/js/src/jit/Ion.cpp:40:0,
                 from /home/jon/clone/dev/js/src/mips64sim-optdebug-build/js/src/Unified_cpp_js_src14.cpp:38:
/home/jon/clone/dev/js/src/jit/Lowering.h:35:7: note:   because the following virtual functions are pure within ‘js::jit::LIRGenerator’:
 class LIRGenerator : public LIRGeneratorSpecific
       ^
In file included from /home/jon/clone/dev/js/src/jit/MIR.h:25:0,
                 from /home/jon/clone/dev/js/src/jit/MIRGenerator.h:23,
                 from /home/jon/clone/dev/js/src/jit/EffectiveAddressAnalysis.h:10,
                 from /home/jon/clone/dev/js/src/jit/EffectiveAddressAnalysis.cpp:7,
                 from /home/jon/clone/dev/js/src/mips64sim-optdebug-build/js/src/Unified_cpp_js_src14.cpp:2:
/home/jon/clone/dev/js/src/jit/MOpcodes.h:314:13902: note: 	virtual void js::jit::MDefinitionVisitor::visitCopySign(js::jit::MCopySign*)
In file included from /home/jon/clone/dev/js/src/jit/BaselineJIT.h:18:0,
                 from /home/jon/clone/dev/js/src/jit/BaselineIC.h:20,
                 from /home/jon/clone/dev/js/src/jit/MIR.h:20,
                 from /home/jon/clone/dev/js/src/jit/MIRGenerator.h:23,
                 from /home/jon/clone/dev/js/src/jit/EffectiveAddressAnalysis.h:10,
                 from /home/jon/clone/dev/js/src/jit/EffectiveAddressAnalysis.cpp:7,
                 from /home/jon/clone/dev/js/src/mips64sim-optdebug-build/js/src/Unified_cpp_js_src14.cpp:2:

It looks like this might have been broken by bug 1275224.
Flags: needinfo?(bbouvier)
Flags: needinfo?(bbouvier)
Attachment #8762074 - Flags: review?(jcoppeard) → review+
Comment on attachment 8762074 [details]
Bug 1279524: Implement dummy copysign on MIPS;

https://reviewboard.mozilla.org/r/58962/#review55892

Cheers for the quick fix.  I checked that this fixed the build error.
Pushed by benj@benj.me:
https://hg.mozilla.org/integration/mozilla-inbound/rev/2656ba248399
Implement dummy copysign on MIPS; r=jonco
https://hg.mozilla.org/mozilla-central/rev/2656ba248399
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: