Bug 1279524: Implement dummy copysign on MIPS; r=jonco

DONTBUILD

MozReview-Commit-ID: 1ADS4Sh9yl6